--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -18,7 +18,7 @@
   display: inline-block;
   background: #259b24;
   color: white;
-  width: 10%;
+  min-width: 10%;
   top: 0;
   min-height: 90px;
   margin: 3px;
