proper layout for health treemap to fill the available space

--- a/app/app.less
+++ b/app/app.less
@@ -144,11 +144,9 @@ body {
 }
 
 .view-container-full {
-  width: 99%;
+  width: 100%;
   height: 100%;
-  margin-left: 3px;
-  margin-right: 3px;
-  margin-bottom: 3px;
+  margin: 1px;
 }
 
 .menu-item {
