--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -1,6 +1,6 @@
 .health-chart {
 
-  background: #bbb;
+  background: transparent;
 }
 
 text {
@@ -26,15 +26,15 @@ rect.parent,
 }
 
 .grandparent rect {
-  fill: #8dc1ed;
+  fill: #81d4fa;
 }
 
 .grandparent:hover rect {
-  fill: #72a1ca;
+  fill: #29b6f6;
 }
 
 .no-children rect.parent {
-  fill: green;
+  fill: #259b24;
   fill-opacity: .35;
 }
 
@@ -44,12 +44,12 @@ rect.parent,
 }
 
 .children rect.parent {
-  fill: green;
-  fill-opacity: .5;
+  fill: #259b24;
+  fill-opacity: .9;
 }
 
 .children:hover rect.child {
-  fill: green;
+  fill: #259b24;
 }
 
 .treemap-tooltip {
@@ -98,7 +98,7 @@ rect.part {
 
 rect.part-parent {
   cursor: pointer;
-  fill: green;
+  fill: #259b24;
   opacity: .5;
 }
 
