--- a/app/health/health.less
+++ b/app/health/health.less
@@ -1,1 +1,10 @@
+.health-map-style-select {
+  width: 100px;
+  margin-top: -13px;
+}
 
+.centered-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
