--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -17,7 +17,7 @@ text {
 
 rect {
   fill: none;
-  stroke: #fff;
+  stroke: #ccc;
 }
 
 rect.parent,
@@ -26,16 +26,16 @@ rect.parent,
 }
 
 .grandparent rect {
-  fill: #81d4fa;
+  fill: #5677fc;
 }
 
 .grandparent:hover rect {
-  fill: #29b6f6;
+  fill: #3b50ce;
 }
 
 .no-children rect.parent {
   fill: #259b24;
-  fill-opacity: .35;
+  fill-opacity: .75;
 }
 
 .children rect.parent,
@@ -70,19 +70,19 @@ text.parent {
 }
 
 circle {
-  fill: #ccc;
-  stroke: #999;
+  fill: #259b24;
+//  stroke: #eee;
   pointer-events: all;
 }
 
 circle.parent {
-  fill: #1f77b4;
-  fill-opacity: .1;
-  stroke: steelblue;
+  fill: #259b24;
+  fill-opacity: .5;
+  stroke: transparent;
 }
 
 circle.parent:hover {
-  stroke: #ff7f0e;
+  stroke: #000;
   stroke-width: .5px;
 }
 
@@ -99,12 +99,12 @@ rect.part {
 rect.part-parent {
   cursor: pointer;
   fill: #259b24;
-  opacity: .5;
+  opacity: .9;
 }
 
 path {
   stroke: #000;
   stroke-width: 1.5;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.9;
 }
