added some box-shadows to controls, started with overhaul for scheduleblock display

--- a/app/app.less
+++ b/app/app.less
@@ -120,7 +120,7 @@
   color: white;
 }
 
-.toolbar-anchor {
+.toolbar-time-span {
   color: white;
 
   &:hover {
@@ -189,9 +189,21 @@ material-sidenav {
   }
 }
 
-.panel-toolbar-turquoise {
+.panel-toolbar {
   background: #283593;
   color: #fff;
   z-index: 1;
   font-size: 1.5em;
+}
+
+.centered-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.material-fab-fa-icon {
+  font-size: 24px;
+  margin-top: 5px;
+  margin-left: 2px;
 }
