--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -43,6 +43,10 @@
 
 .dashboard-container {
 
+  .panel {
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  }
+
   .panel-heading {
     background-color: #303f9f;
     color: white;
