--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -25,14 +25,23 @@
 
 }
 
+.schedule-script-text-area {
+  width:100%;
+//  height: 100%;
+//  max-height: 450px;
+  border: 0;
+  resize: none;
+  padding: 8px;
+}
+
 .schedule-draft-data-list {
 
   padding: 0;
   margin-bottom: 5px;
-  max-width: 800px;
+  width: 100%;
 
   material-list {
-    height: 600px;
+    height: 450px;
     overflow: auto;
 
     material-item {
@@ -46,7 +55,7 @@
   }
 
   .schedule-draft-item {
-    border: 1px solid #d3d3d3;
+    border-bottom: 1px solid #d3d3d3;
   }
 
   .schedule-type-dropdown {
