more improvements to scheduler

--- a/app/app.less
+++ b/app/app.less
@@ -133,7 +133,7 @@ body {
   font-family: RobotoDraft;
   min-width: @app-min-width;
   padding: 0 !important;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .view-container {
@@ -223,4 +223,9 @@ material-sidenav {
 .material-button-fab-small {
   width: 38px !important;
   height: 38px !important;
+}
+
+.inactive-text-input {
+  border: none;
+  background-color: transparent;
 }
