more scheduler work

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -51,11 +51,15 @@
   }
 
   .schedule-block-id {
-    font-size: 1.5em;
+    font-size: 1.25em;
+    margin-left: 8px;
+    font-weight: bold;
+
   }
 
   .schedule-draft-item {
     border-bottom: 1px solid #d3d3d3;
+    height: 45px;
   }
 
   .schedule-type-dropdown {
@@ -66,6 +70,7 @@
 
   .schedule-item-input {
     height: 32px;
+    margin-top: 4px;
   }
 
   .schedule-item-input-group {
