changed material-* to md-* for new version of angular material

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -40,11 +40,11 @@
   margin-bottom: 5px;
   width: 100%;
 
-  material-list {
+  md-list {
     height: 450px;
     overflow: auto;
 
-    material-item {
+    md-item {
       cursor: pointer;
       outline: none;
     }
@@ -78,7 +78,7 @@
   }
 
   .selected-schedule-row {
-    material-item-content {
+    md-item-content {
       background-color: #e1f5fe;
     }
 
