--- a/app/app.less
+++ b/app/app.less
@@ -179,7 +179,7 @@ body {
   }
 }
 
-material-sidenav {
+md-sidenav {
   transition: none !important;
   height: 100%;
 
@@ -208,19 +208,19 @@ material-sidenav {
   justify-content: center;
 }
 
-.material-fab-fa-icon {
+.md-fab-fa-icon {
   font-size: 24px;
   margin-top: 5px;
   margin-left: 2px;
 }
 
-.material-fab-fa-icon-small {
+.md-fab-fa-icon-small {
   font-size: 14px;
 //  margin-top: 0px;
   margin-left: 1px;
 }
 
-.material-button-fab-small {
+.md-button-fab-small {
   width: 38px !important;
   height: 38px !important;
 }
@@ -242,7 +242,7 @@ material-sidenav {
   max-height: 0px;
   min-height: 0px;
 
-  material-button {
+  md-button {
     opacity: 0;
   }
 }
@@ -252,7 +252,7 @@ material-sidenav {
   max-height: 0px;
   min-height: 0px;
 
-  material-button {
+  md-button {
     opacity: 0;
   }
 }
@@ -262,7 +262,7 @@ material-sidenav {
   max-height: 64px;
   min-height: 64px;
 
-  material-button {
+  md-button {
     opacity: 1;
   }
 }
@@ -274,7 +274,7 @@ material-sidenav {
   min-width: 304px;
   overflow: hidden;
 
-  material-content {
+  md-content {
     overflow: hidden;
 
   }
