--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -6,7 +6,7 @@
   margin-bottom: 15px;
 }
 
-.login-form material-button {
+.login-form md-button {
   width: 10em;
   margin:auto;
 }
@@ -19,7 +19,7 @@
   width: 300px;
 }
 
-.login-form section material-button {
+.login-form section md-button {
   display: block;
   margin: 1em;
   line-height: 25px;
@@ -34,11 +34,11 @@
   padding-bottom: 10px;
 }
 
-.login-form material-content {
+.login-form md-content {
   padding-bottom: 15px;
 
 }
 
-.login-form material-input-group {
+.login-form md-input-group {
   font-size: 18px;
 }
