upgraded to material 0.4.2, upgraded to angular 1.3

--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -1,44 +1,7 @@
-.login-form, .layout-content {
+.login-form {
   max-width: 800px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 15px;
-}
-
-.login-form md-button {
-  width: 10em;
-  margin:auto;
-}
-
-.login-form input {
-  width: 30em;
-}
-
-.login-form section {
-  width: 300px;
-}
-
-.login-form section md-button {
-  display: block;
-  margin: 1em;
-  line-height: 25px;
-}
-
-.login-form section {
-  background: #f7f7f7;
-  border-radius: 3px;
-  text-align: center;
-  margin: 1em;
-  position: relative !important;
-  padding-bottom: 10px;
-}
-
-.login-form md-content {
-  padding-bottom: 15px;
-
-}
-
-.login-form md-input-group {
-  font-size: 18px;
 }
