added order by date filter for alarms list

--- a/app/app.less
+++ b/app/app.less
@@ -297,3 +297,10 @@ md-sidenav {
   max-width: 304px;
   min-width: 304px;
 }
+
+.md-checkbox-no-label {
+    margin: 0;
+    .md-label {
+        margin: 0;
+    }
+}
