--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -336,6 +336,12 @@ ul {
         padding-left: 8px;
         padding-right: 8px;
     }
+
+
+}
+
+.alarms-tools-checkbox {
+    font-size: 16px;
 }
 
 
