changed alarms to display messages from backend properly

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -4,7 +4,7 @@
 @alarm-maintenance-bg: #9c27b0;
 @alarm-critical-bg: #e51c23;
 @alarm-unknown-bg: #607d8b;
-@alarm-nominal-bg: #607d8b;
+@alarm-nominal-bg: #259b24;
 
 .large-alarm {
     position: fixed;
@@ -303,10 +303,10 @@ ul {
     }
 
     .alarm-list-item-badge-nominal {
-        background: linear-gradient(150deg, rgba(96, 125, 139, 1) 0%, rgba(96, 125, 139, 0) 5%, rgba(96, 125, 139, 0) 100%);
+        background: linear-gradient(150deg, rgba(37, 155, 36, 1) 0%, rgba(37, 155, 36, 0) 5%, rgba(37, 155, 36, 0) 100%);
     }
     .background-gradient-div-nominal {
-        background: linear-gradient(150deg, rgba(96, 125, 139, 0.01) 0%, rgba(96, 125, 139, 0.01) 90%, rgba(96, 125, 139, 1) 100%);
+        background: linear-gradient(150deg, rgba(37, 155, 36, 0.01) 0%, rgba(37, 155, 36, 0.01) 90%, rgba(37, 155, 36, 1) 100%);
     }
 
     .alarm-list-item-badge-unknown {
