fixed dynamic loading path of d3 when minified

--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -78,6 +78,7 @@
 }
 
 .flash-receptor-state.receptor-STOP {
+    width: 100%;
     animation: flash-black 1s;
     -webkit-animation: flash-black 1s;
 }
