added mockup control buttons for vds control

--- a/app/app.less
+++ b/app/app.less
@@ -12,6 +12,7 @@
 @import "alarms/alarms";
 @import "widgets/navigation/navigation-widget";
 @import "scheduler/scheduler";
+@import "video/video";
 @import "widgets/gantt/gantt-widget";
 @import "health/health";
 @import "d3/d3";
