--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -39,8 +39,11 @@
     color: white;
     min-width: 140px;
     top: 0;
-    min-height: 131px;
+    min-height: 122px;
     margin: 3px;
+    p {
+        margin: 0;
+    }
 }
 
 .receptor-state-list {
